--- a/estudo_js1/index.html
+++ b/estudo_js1/index.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script src="script2.js"></script>
     <title>Document</title>
   </head>
   <body>
-    <button id="button1">texto</button>
-    <button id="button2">texto2</button>
-
-    <script src="script.js"></script>
+    <article>
+      <button id="button1">carregar comentarios</button>
+      <section>
+        <h2>comentários</h2>
+        <ul></ul>
+      </section>
+    </article>
   </body>
 </html>
